{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 11,
  "lineage": "df5eb7a5-630d-983d-70cf-13ec70da5983",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e0b06f01d45a4eb",
            "arn": "arn:aws:ec2:us-east-1:661676943050:instance/i-05f8c9447abbec23e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f8c9447abbec23e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04aba0682d1be2eec",
            "private_dns": "ip-10-0-1-245.ec2.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-52-87-242-238.compute-1.amazonaws.com",
            "public_ip": "52.87.242.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a397f67dd689476e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0ddc465bef7b46b",
            "tags": {
              "Name": "jenkins_master_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04581bc6f6922ca77"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_route_table.internet-route",
            "aws_security_group.jenkins-sg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "each": "list",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb324d928acca58a",
            "arn": "arn:aws:ec2:us-west-2:661676943050:instance/i-09e74a8759e325f06",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e74a8759e325f06",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03858b4931c8ce9c2",
            "private_dns": "ip-192-168-1-157.us-west-2.compute.internal",
            "private_ip": "192.168.1.157",
            "public_dns": "ec2-34-219-224-27.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.224.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e25d9266bccb830c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0add9152ab457fa77",
            "tags": {
              "Name": "jenkins_master_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b9b01bd3c4e32ecd"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_internet_gateway.igw-oregon",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_main_route_table_association.set-worker-default-rt-assoc",
            "aws_route_table.internet-route",
            "aws_route_table.internet-route-oregon",
            "aws_security_group.jenkins-sg",
            "aws_security_group.jenkins-sg-oregon",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_1_oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:internet-gateway/igw-0caee04dc58a5d15c",
            "id": "igw-0caee04dc58a5d15c",
            "owner_id": "661676943050",
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661676943050:internet-gateway/igw-0615605a21aaa934d",
            "id": "igw-0615605a21aaa934d",
            "owner_id": "661676943050",
            "vpc_id": "vpc-0b8a6816e81fd62b0"
          },
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-rt-assoc",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c765688ad936fea6",
            "original_route_table_id": "rtb-01a36eaa9a7907a90",
            "route_table_id": "rtb-06036f3db1af2b4e6",
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet-route",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-worker-default-rt-assoc",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dae09a96d8c124e",
            "original_route_table_id": "rtb-00ecfce6d785d145f",
            "route_table_id": "rtb-09b91e43dddcc1573",
            "vpc_id": "vpc-0b8a6816e81fd62b0"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet-route-oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-route",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:route-table/rtb-06036f3db1af2b4e6",
            "id": "rtb-06036f3db1af2b4e6",
            "owner_id": "661676943050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0caee04dc58a5d15c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-03ae9fb453b0440d7"
              }
            ],
            "tags": {
              "Name": "Masterd-Region-RT"
            },
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-route-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661676943050:route-table/rtb-09b91e43dddcc1573",
            "id": "rtb-09b91e43dddcc1573",
            "owner_id": "661676943050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0615605a21aaa934d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-03ae9fb453b0440d7"
              }
            ],
            "tags": {
              "Name": "Masterd-Region-RT"
            },
            "vpc_id": "vpc-0b8a6816e81fd62b0"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:security-group/sg-04581bc6f6922ca77",
            "description": "Allow 22,8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04581bc6f6922ca77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Allow traffic from us-west-2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow 8080 from lb",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0174d640dbcb3573f"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "661676943050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661676943050:security-group/sg-0b9b01bd3c4e32ecd",
            "description": "Allow 22,8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9b01bd3c4e32ecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow  traffic from us-east8080 from lb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "661676943050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8a6816e81fd62b0"
          },
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:security-group/sg-0174d640dbcb3573f",
            "description": "Allow 443 and traffic to jenkinks SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0174d640dbcb3573f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "661676943050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:subnet/subnet-0c0ddc465bef7b46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c0ddc465bef7b46b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661676943050",
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661676943050:subnet/subnet-0add9152ab457fa77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0add9152ab457fa77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661676943050",
            "vpc_id": "vpc-0b8a6816e81fd62b0"
          },
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:subnet/subnet-0397296d487f77eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0397296d487f77eda",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661676943050",
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661676943050:vpc/vpc-01084595f5074c13f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5cf094408fca310",
            "default_route_table_id": "rtb-06036f3db1af2b4e6",
            "default_security_group_id": "sg-090246242076d00c8",
            "dhcp_options_id": "dopt-0261c06316faeefb1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01084595f5074c13f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06036f3db1af2b4e6",
            "owner_id": "661676943050",
            "tags": {
              "Name": "master-vpc-jenkins"
            },
            "tags_all": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:661676943050:vpc/vpc-0b8a6816e81fd62b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-069675da309f2184c",
            "default_route_table_id": "rtb-09b91e43dddcc1573",
            "default_security_group_id": "sg-045008733803f9740",
            "dhcp_options_id": "dopt-084ed0ef3d4011416",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8a6816e81fd62b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b91e43dddcc1573",
            "owner_id": "661676943050",
            "tags": {
              "Name": "worker-vpc-jenkins"
            },
            "tags_all": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1-uswest2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-03ae9fb453b0440d7",
            "peer_owner_id": "661676943050",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0b8a6816e81fd62b0",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-01084595f5074c13f"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept-peering",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-03ae9fb453b0440d7",
            "peer_owner_id": "661676943050",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0b8a6816e81fd62b0",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-01084595f5074c13f",
            "vpc_peering_connection_id": "pcx-03ae9fb453b0440d7"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    }
  ]
}